--- a/src/voyage/FirstBundle/Resources/views/Default/contact.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/Default/contact.html.twig
@@ -1,1 +1,51 @@
-{# empty Twig template #}
+{% extends "VoyageBundle::layout.html.twig"%}
+
+{% block contains %}
+
+  
+
+
+
+<!-- Contact Img -->
+                <div class="adress_wrap">
+                    <img src="{{asset('bundles/voyage/images/contact_img.png')}}" alt=""/>
+                    <div class="adress">
+                        <h2>Location</h2>
+                        <div>
+                            <p class="first">Ghazela Esprit Tunis,Tunisia</p>
+
+                            <p>Phone: (00) 216 95 215 234</p>
+                            <p>Fax: (00) 216 95 215 234</p>
+                            <p>Email: <a href="#">support@voyage.com</a></p>
+                            <p>Web: <a href="#">www,voyage.com</a></p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Contact Img -->
+                
+                <!-- Grid page -->
+                <div class="content">
+                    <div class="container">
+                        <div class="row contact_wrap">
+                            <div class="span5 contact_form">
+                                <h2>CONTACT FORM</h2>
+                                <form>
+                                    <input type="text" value="Nom :"/>
+                                    <input type="text" value="Email:"/>
+                                    <input type="text" value="Adresse:"/>
+                                    <textarea value="Message:"></textarea>
+                                    <input type="submit" value="Envoyer "/>
+                                </form>
+                            </div>
+                            <div class="map span7">
+                                <h2>Maps</h2>
+                                <iframe width="100%" height="360" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Envato+Pty+Ltd,+13%2F2+Elizabeth+Street,+Melbourne+VIC,+Australia&amp;aq=0&amp;oq=envato&amp;sll=37.0625,-95.677068&amp;sspn=39.371738,86.572266&amp;ie=UTF8&amp;hq=Envato+Pty+Ltd,+13%2F2+Elizabeth+Street,&amp;hnear=Melbourne+Victoria,+Australia&amp;t=p&amp;ll=-37.817209,144.961681&amp;spn=0.010849,0.04107&amp;z=15&amp;output=embed"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Grid page -->
+                
+                
+                
+                {% endblock %}
