--- a/src/voyage/FirstBundle/Resources/views/layout.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/layout.html.twig
@@ -36,7 +36,7 @@
                             <!-- Logo -->
                             <div class="span2">
                                 <div class="logo">
-                                    <a href="index-2.html"><img src="{{asset('bundles/voyage/images/logo.png')}}" alt="Logo"></a>
+                                    <a href="{{path('voyage_homepage')}}"><img src="{{asset('bundles/voyage/images/logo.png')}}" alt="Logo"></a>
                                 </div>
                             </div>
                             <!-- Logo -->
@@ -45,12 +45,11 @@
                             <div class="span7">
                                 <div class="top-menu">
                                     <ul>
-                                        <li><a href="#">About US</a></li>
-                                        <li><a href="#">News</a></li>
-                                        <li><a href="#">Serbice</a></li>
-                                        <li><a href="#">Recruiment</a></li>
-                                        <li><a href="#">Media</a></li>
-                                        <li><a href="#" class="last">Support</a></li>
+                                        <li><a href="#">Qui sommes nous ?</a></li>
+                                        <li><a href="#">Nouvelles</a></li>
+                                        <li><a href="#">Services</a></li>
+                                        
+                                        <li><a href="#" class="last">aide</a></li>
                                     </ul>
                                 </div>
                                 <form class="serch">
@@ -66,8 +65,20 @@
                                 </div>
                                 <div class="btns">
                                     <a href="#" id="login-link">Login</a>
-                                    <a href="#">Register</a>
+                                    <a href="#" id="signon-link">Inscription</a>
                                 </div>
+
+                                        <div class="social-nav">
+                                            <a href="#" class="facebook "></a>
+                                            <a href="#" class="twitter" ></a>
+                                            <a href="#" class="google"></a>
+                                            <a href="#" class="rss"></a>
+                                        </div>
+
+
+
+
+
                             </div>
 
                         </div>
