--- a/src/voyage/FirstBundle/Resources/views/Default/details.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/Default/details.html.twig
@@ -2,9 +2,6 @@
 
 {% block contains %}
 
-  
-
-
 
 <!-- Crum -->
                 <div class="crum-wrapper">
@@ -79,7 +76,7 @@
                                         </div>
                                         <p class="clearfix">Total Booking <span>138$</span></p>
                                         <div class="search">
-                                            <input type="submit" name="search" value="BOOK NOW" >
+                                            <input type="submit" name="search" value="Reserver Maintenant" >
                                         </div>
                                     </form>
                                 </div>
@@ -91,7 +88,7 @@
                                             <div class="viewport">
                                                 <div class="overview">
                                                     <div class="deals clearfix">
-                                                        <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                        <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                         <article class="  pull-left clearfix">
                                                             <div class="hot">
                                                                 <p>Kavin hotel</p>
@@ -106,7 +103,7 @@
                                                         </article>
                                                     </div>
                                                     <div class="deals clearfix">
-                                                        <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                        <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                         <article class="  pull-left clearfix">
                                                             <div class="hot">
                                                                 <p>Kavin hotel</p>
@@ -121,7 +118,7 @@
                                                         </article>
                                                     </div>
                                                     <div class="deals clearfix">
-                                                        <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                        <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                         <article class="  pull-left clearfix">
                                                             <div class="hot">
                                                                 <p>Kavin hotel</p>
@@ -136,7 +133,7 @@
                                                         </article>
                                                     </div>
                                                     <div class="deals clearfix">
-                                                        <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                        <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                         <article class="  pull-left clearfix">
                                                             <div class="hot">
                                                                 <p>Kavin hotel</p>
@@ -151,7 +148,7 @@
                                                         </article>
                                                     </div>
                                                     <div class="deals clearfix">
-                                                        <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                        <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                         <article class="  pull-left clearfix">
                                                             <div class="hot">
                                                                 <p>Kavin hotel</p>
@@ -183,14 +180,14 @@
                                 <div class="carousel_wrap">
                                     <div id="carousel-wrapper">
                                         <div id="carousel_two" class="cool-carousel">
-                                            <span id="image1"><img src="images/crosal-img.png" alt=""/></span>
-                                            <span id="image2"><img src="images/crosal-img2.png" alt="" /></span>
-                                            <span id="image3"><img src="images/crosal-img3.png" alt="" /></span>
-                                            <span id="image4"><img src="images/crosal-img4.png" alt=""/></span>
-                                            <span id="image5"><img src="images/crosal-img5.png" alt=""/></span>
-                                            <span id="image6"><img src="images/crosal-img6.png" alt="" /></span>
-                                            <span id="image7"><img src="images/crosal-img7.png" alt="" /></span>
-                                            <span id="image8"><img src="images/crosal-img.png" alt=""/></span>
+                                            <span id="image1"><img src="{{asset('bundles/voyage/images/crosal-img.png')}}" alt=""/></span>
+                                            <span id="image2"><img src="{{asset('bundles/voyage/images/crosal-img2.png')}}" alt="" /></span>
+                                            <span id="image3"><img src="{{asset('bundles/voyage/images/crosal-img3.png')}}" alt="" /></span>
+                                            <span id="image4"><img src="{{asset('bundles/voyage/images/crosal-img4.png')}}" alt=""/></span>
+                                            <span id="image5"><img src="{{asset('bundles/voyage/images/crosal-img5.png')}}" alt=""/></span>
+                                            <span id="image6"><img src="{{asset('bundles/voyage/images/crosal-img6.png')}}" alt="" /></span>
+                                            <span id="image7"><img src="{{asset('bundles/voyage/images/crosal-img7.png')}}" alt="" /></span>
+                                            <span id="image8"><img src="{{asset('bundles/voyage/images/crosal-img.png')}}" alt=""/></span>
                                         </div>
                                         <a href="#" class="prev"></a><a href="#" class="next"></a>
                                     </div>
@@ -199,13 +196,12 @@
                                         <div id="thumbs-wrapper">
                                             <div id="thumbs">
                                                 <a href="#image1" class="selected"><img src="images/crosal-img.png"  alt="" /></a>
-                                                <a href="#image2"><img src="images/crosal-img4.png" alt="" /></a>
-                                                <a href="#image3"><img src="images/crosal-img3.png" alt=""/></a>
-                                                <a href="#image4"><img src="images/crosal-img2.png" alt=""/></a>
-                                                <a href="#image5"><img src="images/crosal-img5.png"  alt=""/></a>
-                                                <a href="#image6"><img src="images/crosal-img6.png"  alt=""/></a>
-                                                <a href="#image7"><img src="images/crosal-img7.png" alt=""/></a>
-                                                <a href="#image8"><img src="images/crosal-img.png" alt=""/></a>
+                                                <a href="#image2"><img src="{{asset('bundles/voyage/images/crosal-img4.png')}}" alt="" /></a>
+                                                <a href="#image3"><img src="{{asset('bundles/voyage/images/crosal-img3.png')}}" alt=""/></a>
+                                                <a href="#image5"><img src="{{asset('bundles/voyage/images/crosal-img5.png')}}"  alt=""/></a>
+                                                <a href="#image6"><img src="{{asset('bundles/voyage/images/crosal-img6.png')}}"  alt=""/></a>
+                                                <a href="#image7"><img src="{{asset('bundles/voyage/images/crosal-img7.png')}}" alt=""/></a>
+                                                <a href="#image8"><img src="{{asset('bundles/voyage/images/crosal-img.png')}}" alt=""/></a>
                                             </div>
                                             <a id="prev" href="#"></a>
                                             <a id="next" href="#"></a>
@@ -363,7 +359,7 @@
                                                         <div id="vcarousel">
                                                             <ul>
                                                                 <li>
-                                                                    <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                                    <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                                     <article class=" clearfix">
                                                                         <div class="hot pull-left">
                                                                             <h5>Emma Thomson</h5>
@@ -373,7 +369,7 @@
                                                                     </article>
                                                                 </li>
                                                                 <li>
-                                                                    <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                                    <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                                     <article class=" clearfix">
                                                                         <div class="hot pull-left">
                                                                             <h5>Emma Thomson</h5>
@@ -383,7 +379,7 @@
                                                                     </article>
                                                                 </li>
                                                                 <li>
-                                                                    <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                                    <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                                     <article class=" clearfix">
                                                                         <div class="hot pull-left">
                                                                             <h5>Emma Thomson</h5>
@@ -393,7 +389,7 @@
                                                                     </article>
                                                                 </li>
                                                                 <li>
-                                                                    <figure class="pull-left"><img src="images/hotdeal-pic.png" alt="Pic"></figure>
+                                                                    <figure class="pull-left"><img src="{{asset('bundles/voyage/images/hotdeal-pic.png')}}" alt="Pic"></figure>
                                                                     <article class=" clearfix">
                                                                         <div class="hot pull-left">
                                                                             <h5>Emma Thomson</h5>
