--- a/src/voyage/FirstBundle/Resources/public/css/style.css
+++ b/src/voyage/FirstBundle/Resources/public/css/style.css
@@ -220,7 +220,7 @@ p { font: 14px 'proxima_nova_rgregular',Times New Roman, Times, serif; color: #9
 #login-popup #login-button { font: 700 22px 'gotham_roundedmedium', Helvetica, sans-serif; color: #ffffff;   background:#017eba; border:3px;  padding: 15px 50px; margin: 0 auto; text-align:	center;}
 
 /****************************************************************************
-							sigon
+							signon
 ****************************************************************************/
 .signon-popup-wrapper { display: none; width: 100%; height: 100%; position:fixed; top: 0; left: 0; background: url(../images/bg.png) repeat; z-index: 9998; }
 #signon-popup { display:none; position: fixed; top:50%; left:50%; margin: -45px 0 0 -185px; width:246px; padding: 57px 40px 26px 40px; background:#fff; border:3px solid #017eba; z-index: 9999; }
